hal/include/HAL/Digital.h

  
  void setRelayForward(void* digital_port_pointer, bool on, int32_t *status);
  void setRelayReverse(void* digital_port_pointer, bool on, int32_t *status);
  bool getRelayForward(void* digital_port_pointer, int32_t *status);
  bool getRelayReverse(void* digital_port_pointer, int32_t *status);
  
  bool allocateDIO(void* digital_port_pointer, bool input, int32_t *status);
  void freeDIO(void* digital_port_pointer, int32_t *status);
  void setDIO(void* digital_port_pointer, short value, int32_t *status);
  bool getDIO(void* digital_port_pointer, int32_t *status);
  bool getDIODirection(void* digital_port_pointer, int32_t *status);
  void pulse(void* digital_port_pointer, double pulseLength, int32_t *status);
  bool isPulsing(void* digital_port_pointer, int32_t *status);
  bool isAnyPulsing(int32_t *status);
  bool isAnyPulsingWithModule(uint8_t module, int32_t *status);
  typedef enum {kTwoPulse=0, kSemiperiod=1, kPulseLength=2, kExternalDirection=3} Mode;
  
  void* initializeCounter(Mode mode, uint32_t *index, int32_t *status);
  void freeCounter(void* counter_pointer, int32_t *status);
  void setCounterAverageSize(void* counter_pointer, int32_t size, int32_t *status);
  void setCounterUpSourceWithModule(void* counter_pointer, uint8_t module, uint32_t pin,
									bool analogTrigger, int32_t *status); // TODO: Without Module