wpilibj/wpilibJava/src/main/java/edu/wpi/first/wpilibj/hal/HALLibrary.java

	/**
	 * Original signature : <code>void setRelayForward(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:27</i>
	 */
	public static native void setRelayForward(Pointer digital_port_pointer, byte on, IntBuffer status);
	/**
	 * Original signature : <code>void setRelayReverse(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:28</i><br>
	 * @deprecated use the safer methods {@link #setRelayReverse(com.sun.jna.Pointer, byte, java.nio.IntBuffer)} and {@link #setRelayReverse(com.sun.jna.Pointer, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setRelayReverse(Pointer digital_port_pointer, byte on, IntByReference status);
	/**
	 * Original signature : <code>void setRelayReverse(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:28</i>
	 */
	public static native void setRelayReverse(Pointer digital_port_pointer, byte on, IntBuffer status);
	/**
	 * Original signature : <code>bool getRelayForward(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:29</i><br>
	 * @deprecated use the safer methods {@link #getRelayForward(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getRelayForward(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte getRelayForward(Pointer digital_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>bool getRelayForward(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:29</i>
	 */
	public static native byte getRelayForward(Pointer digital_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>bool getRelayReverse(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:30</i><br>
	 * @deprecated use the safer methods {@link #getRelayReverse(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getRelayReverse(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte getRelayReverse(Pointer digital_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>bool getRelayReverse(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:30</i>
	 */
	public static native byte getRelayReverse(Pointer digital_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>bool allocateDIO(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:32</i><br>
	 * @deprecated use the safer methods {@link #allocateDIO(com.sun.jna.Pointer, byte, java.nio.IntBuffer)} and {@link #allocateDIO(com.sun.jna.Pointer, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte allocateDIO(Pointer digital_port_pointer, byte input, IntByReference status);
	/**
	 * Original signature : <code>bool allocateDIO(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:32</i>
	 */
	public static native byte allocateDIO(Pointer digital_port_pointer, byte input, IntBuffer status);
	/**
	 * Original signature : <code>void freeDIO(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:33</i><br>
	 * @deprecated use the safer methods {@link #freeDIO(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #freeDIO(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void freeDIO(Pointer digital_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>void freeDIO(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:33</i>
	 */
	public static native void freeDIO(Pointer digital_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setDIO(void*, short, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:34</i><br>
	 * @deprecated use the safer methods {@link #setDIO(com.sun.jna.Pointer, short, java.nio.IntBuffer)} and {@link #setDIO(com.sun.jna.Pointer, short, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setDIO(Pointer digital_port_pointer, short value, IntByReference status);
	/**
	 * Original signature : <code>void setDIO(void*, short, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:34</i>
	 */
	public static native void setDIO(Pointer digital_port_pointer, short value, IntBuffer status);
	/**
	 * Original signature : <code>bool getDIO(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:35</i><br>
	 * @deprecated use the safer methods {@link #getDIO(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getDIO(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte getDIO(Pointer digital_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>bool getDIO(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:35</i>
	 */
	public static native byte getDIO(Pointer digital_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>bool getDIODirection(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:36</i><br>
	 * @deprecated use the safer methods {@link #getDIODirection(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getDIODirection(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte getDIODirection(Pointer digital_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>bool getDIODirection(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:36</i>
	 */
	public static native byte getDIODirection(Pointer digital_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void pulse(void*, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:37</i><br>
	 * @deprecated use the safer methods {@link #pulse(com.sun.jna.Pointer, float, java.nio.IntBuffer)} and {@link #pulse(com.sun.jna.Pointer, float, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void pulse(Pointer digital_port_pointer, double pulseLength, IntByReference status);
	/**
	 * Original signature : <code>void pulse(void*, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:37</i>
	 */
	public static native void pulse(Pointer digital_port_pointer, double pulseLength, IntBuffer status);
	/**
	 * Original signature : <code>bool isPulsing(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:38</i><br>
	 * @deprecated use the safer methods {@link #isPulsing(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #isPulsing(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte isPulsing(Pointer digital_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>bool isPulsing(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:38</i>
	 */
	public static native byte isPulsing(Pointer digital_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>bool isAnyPulsing(int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:39</i><br>
	 * @deprecated use the safer methods {@link #isAnyPulsing(java.nio.IntBuffer)} and {@link #isAnyPulsing(com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte isAnyPulsing(IntByReference status);
	/**
	 * Original signature : <code>bool isAnyPulsing(int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:39</i>
	 */
	public static native byte isAnyPulsing(IntBuffer status);
	/**
	 * Original signature : <code>bool isAnyPulsingWithModule(uint8_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:40</i><br>
	 * @deprecated use the safer methods {@link #isAnyPulsingWithModule(byte, java.nio.IntBuffer)} and {@link #isAnyPulsingWithModule(byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte isAnyPulsingWithModule(byte module, IntByReference status);
	/**
	 * Original signature : <code>bool isAnyPulsingWithModule(uint8_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:40</i>
	 */
	public static native byte isAnyPulsingWithModule(byte module, IntBuffer status);
	/**
	 * Original signature : <code>void* initializeCounter(Mode, uint32_t*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:44</i><br>
	 * @deprecated use the safer methods {@link #initializeCounter(int, java.nio.IntBuffer, java.nio.IntBuffer)} and {@link #initializeCounter(int, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native Pointer initializeCounter(int mode, IntByReference index, IntByReference status);
	/**
	 * Original signature : <code>void* initializeCounter(Mode, uint32_t*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:44</i>
	 */
	public static native Pointer initializeCounter(int mode, IntBuffer index, IntBuffer status);
	/**
	 * Original signature : <code>void freeCounter(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:45</i><br>
	 * @deprecated use the safer methods {@link #freeCounter(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #freeCounter(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void freeCounter(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>void freeCounter(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:45</i>
	 */
	public static native void freeCounter(Pointer counter_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setCounterAverageSize(void*, int32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:46</i><br>
	 * @deprecated use the safer methods {@link #setCounterAverageSize(com.sun.jna.Pointer, int, java.nio.IntBuffer)} and {@link #setCounterAverageSize(com.sun.jna.Pointer, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterAverageSize(Pointer counter_pointer, int size, IntByReference status);
	/**
	 * Original signature : <code>void setCounterAverageSize(void*, int32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:46</i>
	 */
	public static native void setCounterAverageSize(Pointer counter_pointer, int size, IntBuffer status);
	/**
	 * Original signature : <code>void setCounterUpSourceWithModule(void*, uint8_t, uint32_t, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:47</i><br>
	 * @deprecated use the safer methods {@link #setCounterUpSourceWithModule(com.sun.jna.Pointer, byte, int, byte, java.nio.IntBuffer)} and {@link #setCounterUpSourceWithModule(com.sun.jna.Pointer, byte, int, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterUpSourceWithModule(Pointer counter_pointer, byte module, int pin, byte analogTrigger, IntByReference status);
	/**
	 * Original signature : <code>void setCounterUpSourceWithModule(void*, uint8_t, uint32_t, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:47</i>
	 */
	public static native void setCounterUpSourceWithModule(Pointer counter_pointer, byte module, int pin, byte analogTrigger, IntBuffer status);
